--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "justwravel-assign",
+  "name": "justwravel-project",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@material-tailwind/react": "^2.1.8",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18"
